Solved library problems

--- a/Videojuego/nbproject/project.properties
+++ b/Videojuego/nbproject/project.properties
@@ -34,8 +34,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.LWJGL.classpath}:\
-    ${libs.SLick.classpath}
+    ${libs.LWJGL.classpath}
     ${libs.SLick.classpath}
 =======
     ${libs.slick.classpath}
@@ -43,6 +42,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
